--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -1,18 +1,4 @@
+/* styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-:root {
-    --background: #ffffff;
-    --foreground: #171717;
-    --primary: #3dbf71;
-    --primary-light: #4cd681;
-    --primary-dark: #2e9e57;
-    --background: #f2f2f2;
-}
-
-body {
-    color: var(--foreground);
-    background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
-}
