--- a/Frontend/src/app/globals.css
+++ b/Frontend/src/app/globals.css
@@ -1,4 +1,7 @@
-/* styles/globals.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  font-family: var(--font-poppins), sans-serif;
+}
